<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Parcial"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_margin="30dp"></TextView>

    <Button
        android:id="@+id/enunciado1"
        android:text="@string/Enunciado_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Button>
    <Button
        android:id="@+id/enunciado2"
        android:text="@string/Enunciado_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Button>
    <Button
        android:id="@+id/enunciado3"
        android:text="@string/Enunciado_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Button>
    <Button
        android:id="@+id/enunciado4"
        android:text="@string/Enunciado_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Button>

</LinearLayout>